# ood-metrics

./: .gitignore  LICENSE  MANIFEST.in  README.md  conftest.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: auto-approve.yml  auto-merge.yml  codeql-analysis.yml  pypi-publish.yml  tests.yml
ood_metrics/: __init__.py  metrics.py  plots.py  test_metrics.py
