[tool.poetry]
name = "ood-metrics"
version = "1.0.0"
description = "Calculate common OOD detection metrics"
authors = ["Taylor Denouden <taylordenouden@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tayden/ood-metrics"
keywords = ["OOD", "out-of-distribution", "anomaly", "detection"]
packages = [
    { include = "ood_metrics" }
]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
numpy = "^1.22"
matplotlib = "^3.0"
scikit-learn = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

